Complete Product Details Api
